created my first hello world

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <h1> my favorite subject </h1>
   <head>
-    <title>Title</title>
+    <title>my name jeff</title>
   </head>
   <body>
-    <p>Paragraph</p>
-  </body>
+    <p>hi, nebs</p>
+  </body>I like playing video game because it gives me a sense of freedom and I hate english class because of my grade 10 english teachers grading system pmo.
 </html>
+
